373
I get:
```scala
 <console>:9: error: error overriding method baz in class Foo of type => Int;
 method baz needs `override' modifier
           def baz = 1   // override not required
               ^
```

Something's missing here?
